2015-12-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.4 released.

2015-11-30  Carl Hetherington  <cth@carlh.net>

	* Port to OpenJPEG version 2.1.

2015-12-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.3 released.

2015-12-04  Carl Hetherington  <cth@carlh.net>

	* Fix non-functional send-problem-report.

2015-12-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.2 released.

2015-12-03  Carl Hetherington  <cth@carlh.net>

	* Fix crash on startup of server GUI in some cases.

2015-12-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.1 released.

2015-12-03  Carl Hetherington  <cth@carlh.net>

	* Fix crash on uploading to TMS via FTP.

2015-12-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.0 released.

2015-12-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.15 released.

2015-12-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.14 released.

2015-12-02  Carl Hetherington  <cth@carlh.net>

	* Various fixes to certificate downloading.

	* Version 2.5.13 released.

2015-12-02  Carl Hetherington  <cth@carlh.net>

	* Remove insistence on 6-character Doremi serials (#768).

2015-12-01  c.hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2015-11-30  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2015-11-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.12 released.

2015-11-29  Carl Hetherington  <cth@carlh.net>

	* Possibly fix large memory use with burnt-in subtitles (#766).

2015-11-28  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.11 released.

2015-11-28  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Fix various problems with specification of install directory
	on Windows (#643, #705).

2015-11-27  Carl Hetherington  <cth@carlh.net>

	* Add config and server list to the batch converter's menus (#765).

	* Fix incorrect subtitle timings with multi-reel (#760).

	* Version 2.5.10 released.
