@@ -1,3 +1,8 @@
+2015-12-10  Carl Hetherington  <cth@carlh.net>
+
+	* Put ISDCF name subtitle language in lower case if all subs are
+	burnt into the image.
+
 2015-12-08  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.6.4 released.
